# aoc2022

./: .gitignore  Cargo.toml  day16p1.py  day16p2.py  day20.py  day21.py  day21_evil.py
src/: ext_traits.rs  lib.rs
