[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.2"
anyhow = "1.0.66"
bitvec = "1.0.1"
once_cell = "1.16.0"
pathfinding = "4.0.0"
regex = { version = "1.7.0", features = ["pattern"] }
rustc-hash = "1.1.0"
smallvec = { version = "1.10.0", features = ["const_new", "const_generics", "union"] }
strength_reduce = "0.2.4"
